@@ -1,94 +1,107 @@
 package unittest;
 
+import models.Currency;
+import models.CurrencyCode;
+import models.Transaction;
+import models.Account;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import repository.TransactionRepository;
-import repository.TransactionRepoInterface;
-import models.Transaction;
 import service.TransactionService;
+import service.UserService;
+
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
-class TransactionServiceTest {
+public class TransactionServiceTest {
     private TransactionService transactionService;
-    private TransactionRepoInterface transactionRepository;
+    private TransactionRepository transactionRepository;
+    private UserService userService;
 
     @BeforeEach
     void setUp() {
         transactionRepository = mock(TransactionRepository.class);
-        transactionService = new TransactionService((TransactionRepository) transactionRepository);
+        userService = mock(UserService.class);
+        transactionService = new TransactionService(transactionRepository, userService);
     }
 
     @Test
     void testAddMoney() {
-        int accountId = 1;
-        double amount = 100.0;
-
-        transactionService.addMoney(accountId, amount);
-
-        verify(transactionRepository, times(1)).addTransaction(eq(accountId), any(Transaction.class));
+        transactionService.addMoney(1, 100.0);
+        verify(transactionRepository, times(1)).addTransaction(eq(1), any(Transaction.class));
     }
 
     @Test
     void testWithdrawMoney() {
-        int accountId = 1;
-        double amount = 50.0;
-        when(transactionRepository.getAccountBalance(accountId)).thenReturn(100.0);
-
-        transactionService.withdrawMoney(accountId, amount);
-
-        verify(transactionRepository, times(1)).addTransaction(eq(accountId), any(Transaction.class));
-    }
-
-    @Test
-    void testWithdrawMoneyNotEnoughFunds() {
-        int accountId = 1;
-        double amount = 150.0;
-        when(transactionRepository.getAccountBalance(accountId)).thenReturn(100.0);
-
-        transactionService.withdrawMoney(accountId, amount);
-
-        verify(transactionRepository, times(0)).addTransaction(eq(accountId), any(Transaction.class));
+        transactionService.withdrawMoney(1, 100.0);
+        verify(transactionRepository, times(1)).addTransaction(eq(1), any(Transaction.class));
     }
 
     @Test
     void testExchangeMoney() {
-        double amount = 100.0;
-        String fromCurrency = "USD";
-        String toCurrency = "EUR";
-
-        transactionService.exchangeMoney(amount, fromCurrency, toCurrency);
-
+        transactionService.exchangeMoney(100.0, CurrencyCode.USD, CurrencyCode.EUR);
         verify(transactionRepository, times(1)).addTransaction(eq(0), any(Transaction.class));
     }
 
     @Test
     void testShowHistory() {
-        when(transactionRepository.getAllTransactions()).thenReturn(Arrays.asList(
-                new Transaction(1, 1, 100.0, LocalDateTime.now(), new models.Currency("USD", "US Dollar")),
-                new Transaction(2, 2, 200.0, LocalDateTime.now(), new models.Currency("USD", "US Dollar"))
-        ));
+        Transaction transaction = new Transaction(
+                1, 1, 100.0, LocalDateTime.now(), new Currency(CurrencyCode.USD, "US Dollar")
+        );
+        when(transactionRepository.getAllTransactions()).thenReturn(List.of(transaction));
 
         Map<Integer, List<Transaction>> history = transactionService.showHistory();
-        assertEquals(2, history.size());
+        assertNotNull(history);
+        assertEquals(1, history.size());
+        assertEquals(1, history.get(1).size());
+        assertEquals(transaction, history.get(1).get(0));
     }
 
     @Test
     void testShowUserHistory() {
-        int userId = 1;
-        when(transactionRepository.getAllTransactions()).thenReturn(Arrays.asList(
-                new Transaction(1, 1, 100.0, LocalDateTime.now(), new models.Currency("USD", "US Dollar"), userId),
-                new Transaction(2, 1, 200.0, LocalDateTime.now(), new models.Currency("USD", "US Dollar"), userId)
-        ));
+        Transaction transaction = new Transaction(
+                1, 1, 100.0, LocalDateTime.now(), new Currency(CurrencyCode.USD, "US Dollar")
+        );
+        Account account = new Account(CurrencyCode.USD, 100.0);
+        account.setAccountId(1);
+        when(transactionRepository.getAllTransactions()).thenReturn(List.of(transaction));
+        when(userService.getAccountsByUserId(1)).thenReturn(List.of(account));
 
-        Map<Integer, List<Transaction>> userHistory = transactionService.showUserHistory(userId);
-        assertEquals(1, userHistory.size()); // Количество аккаунтов
-        assertEquals(2, userHistory.get(1).size()); // Количество транзакций
+        Map<Integer, List<Transaction>> userHistory = transactionService.showUserHistory(1);
+        assertNotNull(userHistory);
+        assertEquals(1, userHistory.size());
+        assertEquals(1, userHistory.get(1).size());
+        assertEquals(transaction, userHistory.get(1).get(0));
+    }
+
+    @Test
+    void testAddMoneyWithNegativeAmount() {
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> {
+            transactionService.addMoney(1, -100.0);
+        });
+
+        assertEquals("The amount of money must be greater than zero.", exception.getMessage());
+    }
+
+    @Test
+    void testWithdrawMoneyWithNegativeAmount() {
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> {
+            transactionService.withdrawMoney(1, -100.0);
+        });
+
+        assertEquals("The amount of money must be greater than zero.", exception.getMessage());
+    }
+
+    @Test
+    void testExchangeMoneyWithNegativeAmount() {
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> {
+            transactionService.exchangeMoney(-100.0, CurrencyCode.USD, CurrencyCode.EUR);
+        });
+
+        assertEquals("The amount of money must be greater than zero.", exception.getMessage());
     }
 }
